--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 3rem;
 	background-color: /*#4169E1*/#512B58;
+	transform: translate3d(0px,0px,0px);
 	position: sticky;
 	top: 0;
 	z-index: 500;
@@ -100,7 +101,7 @@ a {
 
 	body {
 		overflow-x: hidden;
-	}	
+	}
 
 	.line {
 		width: 30px;
@@ -122,17 +123,18 @@ a {
 		align-items: center;
 		background: #65587F;
 		height: 100vh;
-		width: 50%;
+		width: 100%;
 		transform: translateX(100%);
 		transition: 0.5s;
 	}
 
 	.nav-links a {
 		margin-right: 0px;
+		font-size: 20px;
 	}
 
 	.nav-links li {
-		margin-top: 5rem;
+		margin-top: 77px;
 	}
 
 	.nav-active {
