el hover invisible del hamburger arreglado

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -110,6 +110,12 @@ a {
 		margin: 5px;
 	}
 
+	.selec:not(.active):hover {
+		color: /*#6495ED*/	white;
+		opacity: 1;
+		transition: 0.3s;
+	}
+
 	.hamburger {
 		cursor: pointer;
 	}
